@@ -1,3 +1,7 @@
+* 2007-09-05 - marcus.klein@open-xchange.com
+
+ - Bugfix #9295: Fixed checking access permission when getting a task.
+
 * 2007-09-04 - thorben.betten@open-xchange.com
 
  - Bugfix #8470: Applied provided patch
